[package]
name = "leaf-protocol"
version = "0.1.0"
edition = "2024"

[features]
default = ["loro", "automerge"]
loro = ["dep:loro"]
automerge = ["dep:automerge"]

[dependencies]
anyhow = "1.0.98"
async-std = { version = "1.13.1", features = [
    "async-attributes",
    "attributes",
] }
beelay-core = { git = "https://github.com/inkandswitch/keyhive.git" }
blake3 = "1.8.2"
blocking = "1.6.1"
concurrent-queue = "2.5.0"
ed25519-dalek = "2.1.1"
fjall = "2.11.0"
flume = "0.11.1"
futures = "0.3.31"
oneshot = "0.1.11"
rand = "0.8.0"
smallvec = "1.15.1"
smol = "2.0.2"
tracing = "0.1.41"

automerge = { version = "0.6.1", optional = true }
loro = { version = "1.5.9", optional = true }

[dev-dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time"] }
